--- a/mapping.Rmd
+++ b/mapping.Rmd
@@ -2,10 +2,13 @@
 title: "Maps"
 output: 
   html_document:
-    code_folding: hide
+    code_folding: hide 
     toc: true
     toc_float: true
 ---
+Below are several choropleth maps depicting where wines are made and the average ratings and prices for each country.
+
+The static map depicts the average rating of each countries' wines. England leads in terms of average wine ratings, with Austria, Germany, and India close behind. It is important to note that there were a much smaller sample size for wines from England India, with only 69 and 9 wines sampled respectively, as compared to other countries with high rankings. On the lower end of the averages cores is Peru and Ukraine.
 
 ```{r setup, include=FALSE}
 library(tidyverse)
@@ -17,16 +20,12 @@ library(rgdal)
 library(maps)
 library(mapproj)
 library(RColorBrewer)
-```
 
-```{r tidying_data, message=FALSE, warning = FALSE, echo = FALSE}
 wine_tidy_df = 
   read_csv(
   "./wine_data/tidy/wine_all.csv") %>% 
   janitor::clean_names()
-```
 
-```{r wine_us, message = FALSE, echo = FALSE}
 wine_us = wine_tidy_df %>% 
   filter(country == "US") %>%
   rename(
@@ -47,26 +46,13 @@ wine_us = wine_tidy_df %>%
     avg_price = round(avg_price, 2)
     ) %>% 
   arrange(desc(total))
-```
 
-```{r missing_us, message = FALSE}
-wine_us_missing = wine_tidy_df %>% 
-  filter(country == "US") %>%
-  rename(
-    state = province) %>% 
-  select(state, points, price) %>% 
-  mutate(
-   state = na_if(state, "America")
- )
-
-purrr::map(wine_us_missing, ~ sum(is.na(.)))
-```
-
-```{r country_df, message = FALSE}
 wine_by_country = wine_tidy_df %>% 
  mutate(
    country = recode(country, US = "United States")
  ) %>% 
+mutate(
+   country = recode(country, England = "United Kingdom")) %>% 
   select(country, points, price) %>% 
   group_by(country) %>%
   drop_na() %>% 
@@ -80,16 +66,6 @@ wine_by_country = wine_tidy_df %>%
     avg_price = round(avg_price, 2)
     ) %>% 
   arrange(desc(total))
-```
-
-```{r country_missing, message = FALSE}
-wine_country_missing = wine_tidy_df %>% 
- mutate(
-   country = recode(country, US = "United States")
- ) %>% 
-  select(country, points, price)
-
-purrr::map(wine_country_missing, ~ sum(is.na(.)))
 ```
 
 ```{r choropleth_map, echo = T, warning = F, results = 'hide'}
@@ -137,7 +113,7 @@ world_spdf <- readOGR(
   verbose = FALSE
 )
 
-world_spdf %>% 
+world_spdf %>%
   leaflet() %>% 
   addTiles() %>% 
   addPolygons(popup = ~NAME)
@@ -183,26 +159,37 @@ world_map_labels = countries_merged_wine %>%
 ## Static Map
 
 ```{r static_map}
-# world_static = map_data("world") %>%
-#   left_join(wine_by_country, by = c("region" = "country"))
-# 
-# ggplot(data = world_static, 
-#                mapping = aes(x = long, y = lat, group = group)) +
-#   geom_polygon(aes(fill = avg_rating)) +
-#   scale_fill_continuous(low = "rosybrown1", high = "darkred", 
-#                         na.value = "snow2") +
-#   coord_map(xlim = c(-180,180), ylim = c(-60, 80)) +
-#   theme(
-#     axis.title.x = element_blank(),
-#     axis.text.x  = element_blank(),
-#     axis.ticks.x = element_blank(),
-#     axis.title.y = element_blank(),
-#     axis.text.y  = element_blank(),
-#     axis.ticks.y = element_blank(),
-#     panel.background = element_rect(fill = "white"))
+wine_by_country_static = wine_by_country %>% 
+ mutate(
+   country = recode(country, "United States" = "USA")) %>% 
+  mutate(
+   country = recode(country, "United Kingdom" = "UK"))
+ 
+
+world_static = map_data("world") %>%
+  left_join(wine_by_country_static, by = c("region" = "country"))
+
+ggplot(data = world_static,
+               mapping = aes(x = long, y = lat, group = group)) +
+  geom_polygon(aes(fill = avg_rating)) +
+  scale_fill_continuous(low = "rosybrown1", high = "darkred",
+                        na.value = "snow2") +
+  coord_map(xlim = c(-180,180), ylim = c(-60, 80)) +
+  theme(
+    axis.title.x = element_blank(),
+    axis.text.x  = element_blank(),
+    axis.ticks.x = element_blank(),
+    axis.title.y = element_blank(),
+    axis.text.y  = element_blank(),
+    axis.ticks.y = element_blank(),
+    panel.background = element_rect(fill = "white"))
 ```
 
 ## Interactive Maps {.tabset}
+
+There are 2 interactive maps, one for US states and a world map. The interactive maps allows for users to hover over a specific US state or country of interest, and look at the total number of wines in our database from that particular state or country, along with their average ratings and prices. 
+
+A large majority of wines in our database were produced in the United States, followed by France and Italy. Within the United States, most wines came from the West Coast, with California being a leading producer of US wines.
 
 ### United States
 
@@ -216,11 +203,3 @@ world_map_labels
 ```
 
 ## {-}
-
-#### Mapping Next Steps
-
-* Take screenshot of maps?
-
-* Update report to include mapping code
-
-* Review interactive - shiny lecture
