--- a/regression.Rmd
+++ b/regression.Rmd
@@ -84,20 +84,24 @@ In the analysis of our dataset, we segmented the wine price at two cutoffs - \$3
 
 ##### Price distribution of red wines
 
+For more detailed distribution, please zoom in.
+
 ```{r, message = FALSE, warning = FALSE}
 red_df %>%
   group_by(price, price_seg) %>%
   summarize(n = n()) %>%
-  plot_ly(x = ~price, y = ~n, color = ~price_seg, type = "bar")
+  plot_ly(x = ~price, y = ~n, color = ~price_seg, type = "bar", colors = "Reds")
 ```
 
 ##### Price distribution of white wines
+
+For more detailed distribution, please zoom in.
 
 ```{r, message = FALSE, warning = FALSE}
 white_df %>% 
   group_by(price, price_seg) %>%
   summarize(n = n()) %>%
-  plot_ly(x = ~price, y = ~n, color = ~price_seg, type = "bar")
+  plot_ly(x = ~price, y = ~n, color = ~price_seg, type = "bar", colors = "Oranges")
 
 ```
 
@@ -112,11 +116,12 @@ red_plot =
   ggplot(aes(x= price, y = points, color = price_seg)) +
   geom_point(alpha = 0.2, size = 0.3) +
   xlim(0, 300)+
-  ggtitle("Rating - Price Distribution of Red Wine")+
+  ggtitle("Rating - Price Distribution of Red Wine") +
   theme(panel.grid.major = element_blank(), 
         panel.grid.minor = element_blank(),
         panel.background = element_blank(), 
-        axis.line = element_line(colour = "black"))
+        axis.line = element_line(colour = "black")) +
+  scale_color_brewer(palette = "Reds")
 
 white_plot = 
 white_df %>%
@@ -128,9 +133,11 @@ white_df %>%
   theme(panel.grid.major = element_blank(), 
         panel.grid.minor = element_blank(),
         panel.background = element_blank(), 
-        axis.line = element_line(colour = "black"))
+        axis.line = element_line(colour = "black")) +
+  scale_color_brewer(palette = "Oranges")
+  
 
-red_plot +white_plot
+red_plot/white_plot
 ```
 
 
@@ -163,7 +170,8 @@ red_df_reg %>%
   geom_line(aes(y = pred), color = "dark red") +
   xlim(0, 500) +
   ylim(80,103)+
-  facet_grid(~model)
+  facet_grid(~model) +
+  scale_color_brewer(palette = "Reds")
 ```
 
 **Cross Validation: fit models and obtain RMSEs to select the best model**
@@ -194,7 +202,8 @@ red_cv_df %>%
     values_to = "rmse",
     names_prefix = "rmse_") %>% 
   mutate(model = fct_inorder(model)) %>% 
-  ggplot(aes(x = model, y = rmse)) + geom_violin()
+  ggplot(aes(x = model, y = rmse)) + 
+  geom_violin()
 ```
 
 **Simple linear model - Red Wine**
@@ -203,7 +212,7 @@ red_cv_df %>%
 linear_mod_red %>%
   broom::glance() %>% 
   dplyr::select(AIC) %>% 
-  knitr::kable(digits = 3)
+  knitr::kable(digits = 5)
 ```
 
 **Piecewise Model - Red Wine**
@@ -212,7 +221,7 @@ linear_mod_red %>%
 pwl_mod_red %>% 
   broom::glance() %>% 
   dplyr::select(AIC) %>% 
-  knitr::kable(digits = 3)
+  knitr::kable(digits = 5)
 ```
 
 **Smooth Model - Red Wine**
@@ -221,7 +230,7 @@ pwl_mod_red %>%
 smooth_mod_red %>% 
   broom::glance() %>% 
   dplyr::select(AIC) %>% 
-  knitr::kable(digits = 3)
+  knitr::kable(digits = 5)
 ```
 
 Using AIC as a measure for Goodness of Fit, we choose the Piecewise Model. 
@@ -255,7 +264,8 @@ white_df_reg %>%
   geom_line(aes(y = pred), color = "yellow") + 
   facet_grid(~model) +
   xlim(0, 500) +
-  ylim(80,100)
+  ylim(80,100) +
+  scale_color_brewer(palette = "Oranges")
 ```
 
 **Cross Validation: fit models and obtain RMSEs to select the best model**
@@ -295,7 +305,7 @@ white_cv_df %>%
 linear_mod_white %>%
   broom::glance() %>% 
   dplyr::select(AIC) %>% 
-  knitr::kable(digits = 3)
+  knitr::kable(digits = 5)
 ```
 
 **Piecewise Model - White Wine**
@@ -304,7 +314,7 @@ linear_mod_white %>%
 pwl_mod_white %>% 
   broom::glance() %>% 
   dplyr::select(AIC) %>% 
-  knitr::kable(digits = 3)
+  knitr::kable(digits = 5)
 ```
 
 **Smooth Model - White Wine**
@@ -313,7 +323,7 @@ pwl_mod_white %>%
 smooth_mod_white %>% 
   broom::glance() %>% 
   dplyr::select(AIC) %>% 
-  knitr::kable(digits = 3)
+  knitr::kable(digits = 5)
 ```
 
 Using AIC as a measure for Goodness of Fit, we choose the Piecewise Model. 
@@ -326,7 +336,7 @@ pw_white_output =
   mutate(exp(estimate)) 
 
 pw_white_output %>% 
-  knitr::kable(digits = 3)
+  knitr::kable()
 ```
 
 <br></br>
